@@ -40,7 +40,7 @@ doctemplatesdir = $(GNUSTEP_RESOURCES)/DocTemplates
 DOCTEMPLATES_FILES = indextemplate.gsdoc AutoDocTemplate.gsdoc
 
 # The application to be compiled
-TOOL_NAME = autogsdoc gdnc gsdoc defaults plmerge \
+TOOL_NAME = autogsdoc cvtenc gdnc gsdoc defaults plmerge \
 		plparse sfparse pldes plser pl2link HTMLLinker
 CTOOL_NAME = gdomap
 
@@ -48,6 +48,7 @@ TEST_TOOL_NAME = locale_alias
 
 # The source files to be compiled
 autogsdoc_OBJC_FILES = autogsdoc.m AGSParser.m AGSOutput.m AGSIndex.m AGSHtml.m
+cvtenc_OBJC_FILES = cvtenc.m
 gdomap_C_FILES = gdomap.c
 gdnc_OBJC_FILES = gdnc.m
 gsdoc_OBJC_FILES = gsdoc.m
